# PablosElMultiverso

./: .gitattributes  .gitignore  CMakeLists.txt  Compilation-Time.md  DiagramaDeClases.md  LICENSE  LICENSE.DCAGII-Game-Template  LICENSE.EnTT  LICENSE.nlohmann-json  LICENSE.raylib  LICENSE.spdlog  LICENSE_COMBINED.txt  Makefile  NOTICES.md  README.md  Release_Policy  Release_Policy.md  game
.github/workflows/: buildDebianPackage.yml  buildDebianPackageCMake.yml  buildWindowsPackageCMake.yml  test.yml
assets/data/enemies/: chemical_destructor.json  darkin.json  zombie.json
assets/data/items/: CelestialSpark.json  CrimsonVial.json  EtherealDagger.json  ExplosiveArsenal.json  Fireball.json  MagicalMirror.json  PearlEgg.json  Raven'sFeather.json  RawMeat.json  RubyHeart.json  Satchel.json  SpinedBreastplate.json  SpiritMask.json  Spotlight.json  VenomousPlant.json  VoidRing.json  item1.json
assets/data/players/: healer.json  mage.json  range.json  warrior.json
assets/data/rounds/: easy.json
assets/data/weapons/: axe.json  chemical_destructor.json  eggplosive.json  laser_ray.json  sniper.json  sword.json  wing.json
assets/sprites/enemies/: Darkin.aseprite  chemical_destructor.aseprite  chemical_destructor.json  darkin.json  zombie.aseprite  zombie.json
assets/sprites/items/: CelestialSpark.aseprite  CelestialSpark.json  Coin.aseprite  Coin.json  CrimsonVial.aseprite  CrimsonVial.json  EtherealDagger.aseprite  EtherealDagger.json  ExplosiveArsenal.aseprite  ExplosiveArsenal.json  Fireball.aseprite  Fireball.json  MagicalMirror.aseprite  MagicalMirror.json  PearlEgg.aseprite  PearlEgg.json  Raven'sFeather.aseprite  Raven'sFeather.json  RawMeat.aseprite  RawMeat.json  RubyHeart.aseprite  RubyHeart.json  Satchel.aseprite  Satchel.json  SpinedBreastplate.aseprite  SpinedBreastplate.json  SpiritMask.aseprite  SpiritMask.json  Spotlight.json  VenomousPlant.json  VoidRing.json  item_11.aseprite  item_5.aseprite
assets/sprites/maps/: Mapa.aseprite  MapaBase.aseprite  default.json  default_upper.json
assets/sprites/players/: Mago.aseprite  Range.aseprite  Warrior.aseprite  mage.json  range.json  warrior.json
assets/sprites/projectiles/: EggplosionBullet.aseprite  EggplosionCircle.aseprite  LaserRay.aseprite  Sniper.aseprite  Wing.aseprite  chemical_bullet.aseprite  chemical_bullet.json  eggplosionBullet.json  eggplosionCircle.json  eggplosive.json  laser_ray.json  sniper.json  wing.json
assets/sprites/weapons/: Axe.aseprite  Eggplosive.aseprite  LaserRay.aseprite  Sniper.aseprite  Sword.aseprite  Wing.aseprite  axe.json  eggplosive.json  laser_ray.json  sniper.json  sword.json  wing.json
debian/: README.Debian  README.source  changelog  control  copyright  rules
include/: AProjectile.hpp
include/app/states/: ChooseNPCGameState.hpp  ChooseNPCMenuState.hpp  GameOverState.hpp  GameWonState.hpp  LanguageMenuState.hpp  MainGameState.hpp  MainMenuState.hpp  ShopState.hpp  StartGameState.hpp
include/common/: AudioManager.hpp  DataFileManager.hpp  FrameAnimation.hpp  I18N.hpp  SpriteAnimation.hpp  SpriteLoaderManager.hpp  SpriteSheet.hpp  Types.hpp
include/components/: AccelerationComponent.hpp  CollisionComponents.hpp  EnemyComponent.hpp  EntityComponent.hpp  FlockingComponent.hpp  FollowPlayerComponent.hpp  InputComponent.hpp  NormalTypeEnemiesComponents.hpp  PlayerComponent.hpp  ProjectileComponent.hpp  RangeWeaponComponent.hpp  RenderComponent.hpp  RenderComponents.hpp  StatsComponents.hpp  TransformComponent.hpp  WeaponComponent.hpp
include/game/entities/base/: AEntity.hpp  AMeleeWeapon.hpp  ARangeWeapon.hpp  AWeapon.hpp  AxeWeapon.hpp  ChemicalDestructorWeapon.hpp  EggplosiveWeapon.hpp  Geometry.hpp  Item.hpp  LaserRayWeapon.hpp  RangeWeapon.hpp  SniperWeapon.hpp  Stats.hpp  SwordWeapon.hpp  Weapon.hpp  WeaponFactory.hpp  WingWeapon.hpp  item.hpp
include/game/misc/: AProjectile.cpp  AProjectile.hpp
include/game/projectiles/: AProjectile.hpp  ChemicalDestructorProjectile.hpp  EggplosiveProjectile.hpp  LaserRayProjectile.hpp  SniperProjectile.hpp  WingProjectile.hpp
include/game/rounds/: Round.hpp  RoundInfo.hpp  RoundManager.hpp
include/game/shop/: ItemsFactory.hpp  Shop.hpp  ShopSlot.hpp
include/systems/: AccelerationIntegrationSystem.hpp  AnimationSystem.hpp  FlockingSystem.hpp  FollowPlayerSystem.hpp  GetClosestEnemySystem.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  UpdateClosestPlayerSystem.hpp  VelocityLimiterSystem.hpp  WeaponPositionSystem.hpp  WeaponRotationSystem.hpp
include/utils/: ScreenConstants.hpp  WindowFlags.hpp
locale/en_US/LC_MESSAGES/: pablos.mo
locale/es_ES/LC_MESSAGES/: pablos.mo
locale/fr_FR/LC_MESSAGES/: pablos.mo
po/: en_US.po  es_ES.po  fr_FR.po  pablos.pot
src/: GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
src/Interfaces/: AEntidad.cpp
src/app/: i18n_strings.cpp  main.cpp
src/app/states/: ChooseNPCMenuState.cpp  GameOverState.cpp  GameWonState.cpp  LanguageMenuState.cpp  MainGameState.cpp  MainMenuState.cpp  ShopState.cpp  StartGameState.cpp
src/common/: AudioManager.cpp  DataFileManager.cpp  I18N.cpp  SpriteLoaderManager.cpp
src/game/entities/base/: AEntity.cpp  (+17 more)
src/game/misc/: AProjectile.cpp
src/game/projectiles/: AProjectile.cpp  ChemicalDestructorProjectile.cpp  EggplosiveProjectile.cpp  LaserRayProjectile.cpp  SniperProjectile.cpp  WingProjectile.cpp
src/game/rounds/: Round.cpp  RoundManager.cpp
src/game/shop/: ItemsFactory.cpp  Shop.cpp
src/interfaces/: AEnemy.cpp  AEnemy.hpp  AEntidad.hpp  AEntity.cpp  AEntity.hpp  Geometry.hpp  IEnemigo.hpp  Stats.cpp  Stats.hpp
src/stateMachines/: main.cpp
src/systems/: AccelerationIntegrationSystem.cpp  AnimationSystem.cpp  FlockingSystem.cpp  FollowPlayerSystem.cpp  GetClosestEnemySystem.cpp  InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  UpdateClosestPlayerSystem.cpp  VelocityLimiterSystem.cpp  WeaponPositionSystem.cpp  WeaponRotationSystem.cpp
src/utils/: WindowFlags.cpp
tests/: AudioManager_test.cpp  CMakeLists.txt  DataFileManager_test.cpp  SpriteLoaderManager_test.cpp
(+10 files in other folders)
